--- a/.github/workflows/telegram_notification.yaml
+++ b/.github/workflows/telegram_notification.yaml
@@ -1,23 +1,17 @@
-name: Inline Message Workflow
+name: Telegram Notification
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
 
 jobs:
-  send-inline-message:
+  notify:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Send Inline Telegram Message
-        uses: cbrgm/telegram-github-action@v1
-        with:
-          token: ${{ secrets.TELEGRAM_TOKEN }}
-          to: ${{ secrets.TELEGRAM_CHAT_ID }}
-          message: |
-            New commit by ${{ github.actor }}!
-            Commit: ${{ github.event.head_commit.message }}
-            Repository: ${{ github.repository }}
-            View changes: https://github.com/${{ github.repository }}/commit/${{ github.sha }}
+      - name: Send Telegram Message
+        env:
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+        run: |
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage -d chat_id=${TELEGRAM_CHAT_ID} -d text="Hello from GitHub Actions!"
