edit telegram yaml

--- a/.github/workflows/telegram_notification.yaml
+++ b/.github/workflows/telegram_notification.yaml
@@ -9,7 +9,7 @@ jobs:
   notify:
     runs-on: ubuntu-latest
     steps:
-      - name: Send Telegram Message
+      - name: Send Telegram Messages
         env:
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
