--- a/.github/workflows/issues.yaml
+++ b/.github/workflows/issues.yaml
@@ -9,8 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Send Telegram Message
-        uses: appleboy/telegram-action@master
-        with:
-          to: ${{ secrets.TELEGRAM_TO }}
-          token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+        env:
+            TELEGRAM_TO: ${{ secrets.TELEGRAM_TO }}
+            TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+        run: |    
           message: "New issue created: ${{ github.event.issue.title }}. Check it [here](${{ github.event.issue.html_url }})"
